# CBT_Simulation

./: README.md
src/robosense_simulator/robosense_description/: package.xml
src/robosense_simulator/robosense_gazebo_plugins/src/: GazeboRosRoboSenseLaser.cpp
src/steer_bot/steer_bot_viz/rviz/: steer_bot_robot.rviz
src/truck_simulation/: CMakeLists.txt  package.xml
src/truck_simulation/launch/: cbt_sim.launch  truck_sim.launch
src/truck_simulation/meshes/: wheel1.stl  wheel2.stl  wheel3.stl
src/truck_simulation/rviz/: urdf_config.rviz
src/truck_simulation/urdf/: ex_joint_new.urdf.xacro  inertials.xacro  materials.xacro  steer_bot.urdf.xacro  wheel.xacro  wheel_cbt.xacro
