<?xml version="1.0"?>
<package format="2">
  <name>robosense_description</name>
  <version>1.0.0</version>
  <description>
    URDF and meshes describing Robosense laser scanners.
  </description>

  <license>BSD</license>
  <author>Thomas SIMON</author>
  <maintainer email="thomas.simon@ensta-paris.fr">Thomas SIMON</maintainer>
  <url type="website">http://wiki.ros.org/robosense_description</url>
  <!--url type="repository"></url>
  <url type="bugtracker"></url-->

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ackermann_steering_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>steer_bot_control</exec_depend>
  <exec_depend>steer_bot_description</exec_depend>
  <exec_depend>steer_bot_hardware_gazebo</exec_depend>
  <exec_depend>steer_drive_controller</exec_depend>
  <exec_depend>xacro</exec_depend> 

</package>
